--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,26 @@
 name = "util_lib"
 version = "0.1.0"
 edition = "2024"
+authors = ["Sam Colak <sam@samcolak.com>"]
+
+[target.'cfg(not(windows))'.dependencies]
+rustix = { version = "0.38.34", default-features = false, features = [
+    "system",
+] }
+syslog = "*"
+
+[target.'cfg(windows)'.dependencies]
+windows-targets = "*"
+syslog = "^6.0"
 
 [dependencies]
+rand = "0.6.0"
+chrono = "*"
+base64 = "0.22.1"
+uuid = { version = "1.1.2", features = ["serde", "v4", "v7", "fast-rng"] }
+serde = { version = "1.0", features = ["derive"] }
+totp-rs = "*"
+maxminddb = "0.17"
+serde_json = "1.0"
+log = "~0.4.5"
+md5 = "0.7.0"
