--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,9 +44,9 @@ uuid = { version = "1.1.2", features = ["serde", "v4", "v7", "fast-rng"] }
 serde = { version = "1.0", features = ["derive"] }
 totp-rs = { version = "*", features = ["otpauth"] }
 maxminddb = "0.17"
-serde_json = "1.0"
+serde_json = "*"
 log = "~0.4.5"
-md5 = "0.7.0"
+md5 = "*"
 regex = "*"
 substring = "*"
 warp = {version="*", features = ["tls", "compression"]}
